--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -44,3 +44,8 @@ management:
     web:
       exposure:
         include: refresh, beans, health, httptrace, busrefresh
+
+
+logging:
+  level:
+    com.example.userservice.client: DEBUG
